# SpartanSuitNative

./: .gitignore  CMakeLists.txt  Error.h  SpartanSuitNative.sln  SpartanSuitNative.vcxproj  SpartanSuitNative.vcxproj.filters  main.cpp  udp_client.py
Docs/: Data overhead goals.txt
Math/: Vector3.cpp  Vector3.h
RemoteConnection/: Joint.cpp  Joint.h  MotionData.h
RemoteConnection/Server/: NetworkDefinitions.cpp  NetworkDefinitions.h  UDPServer.cpp  UDPServer.h
SpartanS.08af78dd/x64/Debug/: vc143.idb
SpartanS.08af78dd/x64/Debug/SpartanS.08af78dd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpartanSuitNative.lastbuildstate
Utils/: Assert.h
